--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -80,6 +80,7 @@ jobs:
           key: ${{ secrets.AWS_EC2_PEM }}
           port: 22
           script: |
+            ls -ls /opt
             docker ps -a
             ls -la
             printenv
