--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -56,6 +56,7 @@ jobs:
           username: ${{ env.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PEM }}
           port: 22
+          overwrite: true
           source: ${{ env.SERVICE_NAME }}.tar
           target: /home/ubuntu
 
@@ -70,15 +71,20 @@ jobs:
           docker push ${ECR_REGISTRY}/${REPO_NAME}:v0.1.${RUN_NUMBER}-${SHA_SHORT}
 
       - name: Deploy to EC2 - executing remote ssh commands
-        uses: appleboy/ssh-action@master         
+        uses: appleboy/ssh-action@master
+        env:
+          ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
+          REPO_NAME: ${{ env.SERVICE_NAME }}
+          RUN_NUMBER: ${{ github.run_number }}
+          SHA_SHORT: ${{ steps.version.outputs.sha_short }}
         with:
           host: ${{ env.AWS_EC2_PUBLIC_IP }}
           username: ${{ env.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PEM }}
-          overwrite: true
           port: 22
           script: |
-            ls -ls /opt
-            docker ps -a
+            ls -ls /home/ubuntu
+            audo docker ps -a
             ls -la
+            pwd
             printenv
