--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -72,11 +72,6 @@ jobs:
 
       - name: Deploy to EC2 - executing remote ssh commands
         uses: appleboy/ssh-action@master
-        env:
-          ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
-          REPO_NAME: ${{ env.SERVICE_NAME }}
-          RUN_NUMBER: ${{ github.run_number }}
-          SHA_SHORT: ${{ steps.version.outputs.sha_short }}
         with:
           host: ${{ env.AWS_EC2_PUBLIC_IP }}
           username: ${{ env.AWS_EC2_USERNAME }}
@@ -84,7 +79,8 @@ jobs:
           port: 22
           script: |
             ls -ls /home/ubuntu
-            audo docker ps -a
+            sudo docker ps -a
             ls -la
             pwd
             printenv
+            sudo docker images
