--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -1,12 +1,4 @@
 name: Deploy to AWS-EC2
-
-env:
-  AWS_EC2_PUBLIC_IP: kps.sytes.net
-  AWS_EC2_USERNAME: ubuntu
-  AWS_REGION: eu-west-2
-  SERVICE_NAME: edutest-fe-test
-  SERVICE_PORT: 80
-  LOGSTASH_URI: "udp://192.168.122.200:5000"
 on:
   push:
     branches:
@@ -23,7 +15,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
           
       - name: Login to Amazon ECR
         id: login-ecr
@@ -38,32 +30,32 @@ jobs:
       - name: Build the Docker image
         env:
           ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
-          REPO_NAME: ${{ env.SERVICE_NAME }}
+          REPO_NAME: ${{ secrets.SERVICE_NAME }}
           RUN_NUMBER: ${{ github.run_number }}
           SHA_SHORT: ${{ steps.version.outputs.sha_short }}
         run: |
           pwd
           docker build --file Dockerfile --tag=${ECR_REGISTRY}/${REPO_NAME}:latest --rm=true .
           docker tag ${ECR_REGISTRY}/${REPO_NAME}:latest ${ECR_REGISTRY}/${REPO_NAME}:v0.1.${RUN_NUMBER}-${SHA_SHORT}
-          docker save -o ${REPO_NAME}.tar ${ECR_REGISTRY}/${REPO_NAME}:latest
+          docker save -o ${REPO_NAME}.v0.1.${RUN_NUMBER}-${SHA_SHORT}.tar ${ECR_REGISTRY}/${REPO_NAME}:latest
           ls -la
           docker images
 
       - name: scp docker image to EC2
         uses: appleboy/scp-action@master
         with:
-          host: ${{ env.AWS_EC2_PUBLIC_IP }}
-          username: ${{ env.AWS_EC2_USERNAME }}
+          host: ${{ secrets.AWS_EC2_PUBLIC_IP }}
+          username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PEM }}
           port: 22
           overwrite: true
-          source: ${{ env.SERVICE_NAME }}.tar
-          target: /home/ubuntu
+          source: ${REPO_NAME}.v0.1.${RUN_NUMBER}-${SHA_SHORT}.tar
+          target: /home/ubuntu/docker_images/${REPO_NAME}
 
       - name: Push to AWS-ECR
         env:
           ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
-          REPO_NAME: ${{ env.SERVICE_NAME }}
+          REPO_NAME: ${{ secrets.SERVICE_NAME }}
           RUN_NUMBER: ${{ github.run_number }}
           SHA_SHORT: ${{ steps.version.outputs.sha_short }}
         run: |
@@ -73,8 +65,8 @@ jobs:
       - name: Deploy to EC2 - executing remote ssh commands
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ env.AWS_EC2_PUBLIC_IP }}
-          username: ${{ env.AWS_EC2_USERNAME }}
+          host: ${{ secrets.AWS_EC2_PUBLIC_IP }}
+          username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PEM }}
           port: 22
           script: |
