--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -43,6 +43,11 @@ jobs:
 
       - name: scp docker image to EC2
         uses: appleboy/scp-action@master
+        env:
+          ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
+          REPO_NAME: ${{ secrets.SERVICE_NAME }}
+          RUN_NUMBER: ${{ github.run_number }}
+          SHA_SHORT: ${{ steps.version.outputs.sha_short }}
         with:
           host: ${{ secrets.AWS_EC2_PUBLIC_IP }}
           username: ${{ secrets.AWS_EC2_USERNAME }}
