--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -55,7 +55,7 @@ jobs:
           port: 22
           overwrite: true
           source: ${REPO_NAME}.tar
-          target: /home/ubuntu/docker_images/${REPO_NAME}
+          target: /home/ubuntu
 
       - name: Push to AWS-ECR
         env:
