--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -47,8 +47,8 @@ jobs:
       - name: scp docker image to EC2
         uses: appleboy/scp-action@master
         with:
-          host: ${{ env.AWS_EC2_PUBLIC_IP }}
-          username: ${{ env.AWS_EC2_USERNAME }}
+          host: ${{ secrets.AWS_EC2_PUBLIC_IP }}
+          username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PEM }}
           port: 22
           overwrite: true
