--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -1,11 +1,4 @@
 name: Deploy to AWS-EC2
-env:
-  AWS_EC2_PUBLIC_IP: kps.sytes.net
-  AWS_EC2_USERNAME: ubuntu
-  AWS_REGION: eu-west-2
-  SERVICE_NAME: edutest-fe-test
-  SERVICE_PORT: 80
-  LOGSTASH_URI: "udp://192.168.122.200:5000"
 on:
   push:
     branches:
@@ -44,16 +37,25 @@ jobs:
           docker save -o ${REPO_NAME}.tar ${ECR_REGISTRY}/${REPO_NAME}:latest
           ls -la
           docker images
+          
       - name: scp docker image to EC2
         uses: appleboy/scp-action@master
+        env:
+          ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
+          REPO_NAME: ${{ env.SERVICE_NAME }}
+          RUN_NUMBER: ${{ github.run_number }}
+          SHA_SHORT: ${{ steps.version.outputs.sha_short }}
+          AWS_EC2_USERNAME: ${{ env.AWS_EC2_USERNAME }}
+          AWS_EC2_PUBLIC_IP: ${{ env.AWS_EC2_PUBLIC_IP }}
         with:
-          host: ${{ secrets.AWS_EC2_PUBLIC_IP }}
-          username: ${{ secrets.AWS_EC2_USERNAME }}
+          host: $AWS_EC2_PUBLIC_IP
+          username: $AWS_EC2_USERNAME
           key: ${{ secrets.AWS_EC2_PEM }}
           port: 22
           overwrite: true
           source: ${{ env.SERVICE_NAME }}.tar
           target: /home/ubuntu
+          
       - name: Push to AWS-ECR
         env:
           ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
