--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
           
       - name: Login to Amazon ECR
         id: login-ecr
@@ -27,7 +27,7 @@ jobs:
       - name: Build the Docker image
         env:
           ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
-          REPO_NAME: ${{ env.SERVICE_NAME }}
+          REPO_NAME: ${{ secrets.SERVICE_NAME }}
           RUN_NUMBER: ${{ github.run_number }}
           SHA_SHORT: ${{ steps.version.outputs.sha_short }}
         run: |
@@ -42,11 +42,11 @@ jobs:
         uses: appleboy/scp-action@master
         env:
           ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
-          REPO_NAME: ${{ env.SERVICE_NAME }}
+          REPO_NAME: ${{ secrets.SERVICE_NAME }}
           RUN_NUMBER: ${{ github.run_number }}
           SHA_SHORT: ${{ steps.version.outputs.sha_short }}
-          AWS_EC2_USERNAME: ${{ env.AWS_EC2_USERNAME }}
-          AWS_EC2_PUBLIC_IP: ${{ env.AWS_EC2_PUBLIC_IP }}
+          AWS_EC2_USERNAME: ${{ secrets.AWS_EC2_USERNAME }}
+          AWS_EC2_PUBLIC_IP: ${{ secrets.AWS_EC2_PUBLIC_IP }}
         with:
           host: $AWS_EC2_PUBLIC_IP
           username: $AWS_EC2_USERNAME
