--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -1,4 +1,6 @@
 name: Deploy to AWS-EC2
+env:
+  
 on:
   push:
     branches:
@@ -9,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: sadad
+        run: printenv
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -19,11 +23,13 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        
       - name: Extract project informations
         id: version
         run: |
           echo ::set-output name=sha_short::$(git rev-parse --short HEAD)
           echo ::set-output name=ECR_REGISTRY::${{ steps.login-ecr.outputs.registry }}
+          
       - name: Build the Docker image
         env:
           ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
