--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -1,5 +1,9 @@
 name: Deploy to AWS-EC2
-
+env:
+  SERVICE_NAME: ${{ env.SERVICE_NAME }}
+  AWS_EC2_USERNAME: ${{ env.AWS_EC2_USERNAME }}
+  AWS_EC2_PUBLIC_IP: ${{ env.AWS_EC2_PUBLIC_IP }}
+  AWS_REGION: ${{ env.AWS_REGION }}
 on:
   push:
     branches:
@@ -32,7 +36,7 @@ jobs:
       - name: Build the Docker image
         env:
           ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
-          REPO_NAME: ${{ secrets.SERVICE_NAME }}
+          REPO_NAME: ${{ env.SERVICE_NAME }}
           RUN_NUMBER: ${{ github.run_number }}
           SHA_SHORT: ${{ steps.version.outputs.sha_short }}
         run: |
@@ -47,11 +51,11 @@ jobs:
         uses: appleboy/scp-action@master
         env:
           ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
-          REPO_NAME: ${{ secrets.SERVICE_NAME }}
+          REPO_NAME: ${{ env.SERVICE_NAME }}
           RUN_NUMBER: ${{ github.run_number }}
           SHA_SHORT: ${{ steps.version.outputs.sha_short }}
-          AWS_EC2_USERNAME: ${{ secrets.AWS_EC2_USERNAME }}
-          AWS_EC2_PUBLIC_IP: ${{ secrets.AWS_EC2_PUBLIC_IP }}
+          AWS_EC2_USERNAME: ${{ env.AWS_EC2_USERNAME }}
+          AWS_EC2_PUBLIC_IP: ${{ env.AWS_EC2_PUBLIC_IP }}
         with:
           host: $AWS_EC2_PUBLIC_IP
           username: $AWS_EC2_USERNAME
