--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -15,7 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: sadad
-        run: printenv
+        run: |
+            echo "${{ env.SERVICE_NAME }}"
+            echo "${{ env.SERVICE_NAME }}"
+            echo "${{ env.AWS_EC2_PUBLIC_IP }}"
+            echo "${{ env.AWS_REGION }}"
+        
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
