--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -1,8 +1,8 @@
 name: Deploy to AWS-EC2
 env:
-  SERVICE_NAME: ${{ secrets.SERVICE_NAME }}
-  AWS_EC2_USERNAME: ${{ secrets.AWS_EC2_USERNAME }}
-  AWS_EC2_PUBLIC_IP: ${{ secrets.AWS_EC2_PUBLIC_IP }}
+  SERVICE_NAME: ${{ env.SERVICE_NAME }}
+  AWS_EC2_USERNAME: ${{ env.AWS_EC2_USERNAME }}
+  AWS_EC2_PUBLIC_IP: ${{ env.AWS_EC2_PUBLIC_IP }}
   AWS_REGION: ${{ secrets.AWS_REGION }}
 on:
   push:
