--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -1,4 +1,11 @@
 name: Deploy to AWS-EC2
+env:
+  AWS_EC2_PUBLIC_IP: kps.sytes.net
+  AWS_EC2_USERNAME: ubuntu
+  AWS_REGION: eu-west-2
+  SERVICE_NAME: edutest-fe-test
+  SERVICE_PORT: 80
+  LOGSTASH_URI: "udp://192.168.122.200:5000"
 on:
   push:
     branches:
@@ -7,14 +14,9 @@ jobs:
   merge_job:
     name: Build, Push and Deploy
     runs-on: ubuntu-latest
-    env:
-      SERVICE_NAME: ${{ env.SERVICE_NAME }}
-      AWS_EC2_USERNAME: ${{ env.AWS_EC2_USERNAME }}
-      AWS_EC2_PUBLIC_IP: ${{ env.AWS_EC2_PUBLIC_IP }}
-      AWS_REGION: ${{ secrets.AWS_REGION }}
     steps:
       - uses: actions/checkout@v2
-      - name: sadad
+      - name: Check
         run: |
             echo "${{ env.SERVICE_NAME }}"
             echo "${{ env.SERVICE_NAME }}"
@@ -26,7 +28,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-2
+          aws-region: ${{ env.AWS_REGION }}
           
       - name: Login to Amazon ECR
         id: login-ecr
