--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -64,8 +64,8 @@ jobs:
           AWS_EC2_USERNAME: ${{ env.AWS_EC2_USERNAME }}
           AWS_EC2_PUBLIC_IP: ${{ env.AWS_EC2_PUBLIC_IP }}
         with:
-          host: $AWS_EC2_PUBLIC_IP
-          username: $AWS_EC2_USERNAME
+          host: ${AWS_EC2_PUBLIC_IP}
+          username: ${AWS_EC2_USERNAME}
           key: ${{ secrets.AWS_EC2_PEM }}
           port: 22
           overwrite: true
