--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -56,16 +56,9 @@ jobs:
           
       - name: scp docker image to EC2
         uses: appleboy/scp-action@master
-        env:
-          ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
-          REPO_NAME: ${{ env.SERVICE_NAME }}
-          RUN_NUMBER: ${{ github.run_number }}
-          SHA_SHORT: ${{ steps.version.outputs.sha_short }}
-          AWS_EC2_USERNAME: ${{ env.AWS_EC2_USERNAME }}
-          AWS_EC2_PUBLIC_IP: ${{ env.AWS_EC2_PUBLIC_IP }}
         with:
-          host: ${AWS_EC2_PUBLIC_IP}
-          username: ${AWS_EC2_USERNAME}
+          host: ${{ env.AWS_EC2_PUBLIC_IP }}
+          username: ${{ env.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PEM }}
           port: 22
           overwrite: true
