--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -50,7 +50,7 @@ jobs:
           pwd
           docker build --file Dockerfile --tag=${ECR_REGISTRY}/${REPO_NAME}:latest --rm=true .
           docker tag ${ECR_REGISTRY}/${REPO_NAME}:latest ${ECR_REGISTRY}/${REPO_NAME}:v0.1.${RUN_NUMBER}-${SHA_SHORT}
-          docker save -o ${REPO_NAME}.tar ${ECR_REGISTRY}/${REPO_NAME}:latest
+          docker save -o ${REPO_NAME}-v0.1.${RUN_NUMBER}-${SHA_SHORT}.tar ${ECR_REGISTRY}/${REPO_NAME}:latest
           ls -la
           docker images
           
@@ -62,7 +62,7 @@ jobs:
           key: ${{ secrets.AWS_EC2_PEM }}
           port: 22
           overwrite: true
-          source: ${{ env.SERVICE_NAME }}.tar
+          source: ${{ env.SERVICE_NAME }}-v0.1.$${{ github.run_number }}-${{ steps.version.outputs.sha_short }}.tar
           target: /home/ubuntu/docker_images/${{ env.SERVICE_NAME }}
           
       - name: Push to AWS-ECR
