--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   merge_job:
     name: Build, Push and Deploy
+    environment: KPS
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
