--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   merge_job:
     name: Build, Push and Deploy
-    environment: KPS
+    environment: KPSa
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,6 +23,10 @@ jobs:
             echo "${{ env.SERVICE_NAME }}"
             echo "${{ env.AWS_EC2_PUBLIC_IP }}"
             echo "${{ env.AWS_REGION }}"
+            printenv TEST_ENV
+            echo " "
+            printenv
+            echo " "
         
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
