--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   merge_job:
     name: Build, Push and Deploy
-    environment: KPS_ABC
+    environment: KPS
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,6 +25,7 @@ jobs:
             echo " "
             printenv
             echo " "
+            KPS="Test env vars for python"
         
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
