--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -18,8 +18,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Check
+        env: |
+          TEST: ${{ kps.secrets.TEST_ENV }}
+          
         run: |
-            echo "${{ kps.secrets.TEST_ENV }}"
+            echo "${TEST}"
             echo "${{ env.SERVICE_NAME }}"
             echo "${{ env.AWS_EC2_PUBLIC_IP }}"
             echo "${{ env.AWS_REGION }}"
