--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Check
         env: 
-          TEST: ${{ kps.secrets.TEST_ENV }}
+          TEST: ${{ secrets.TEST_ENV }}
           
         run: |
             echo "${TEST}"
