--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -84,9 +84,5 @@ jobs:
             ECR_REGISTRY=${{ steps.version.outputs.ECR_REGISTRY }}
             RUN_NUMBER=${{ github.run_number }}
             SHA_SHORT=${{ steps.version.outputs.sha_short }}
-            echo $ECR_REGISTRY
-            echo $AWS_REGION
-            sudo USER_ID=$(curl -s http://169.254.169.254/latest/dynamic/instance-identity/document | grep '"accountId"' | cut -d\" -f4)
-            sudo echo $USER_ID
-            aws ecr get-login-password --region ${AWS_REGION}| docker login --username AWS --password-stdin ${USER_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com
+            aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_REGISTRY}
                 
