--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -88,4 +88,5 @@ jobs:
             sudo docker pull ${ECR_REGISTRY}/${SERVICE_NAME}:latest
             sudo docker images
             sudo docker rm -f $(sudo docker ps -aqf "name=${SERVICE_NAME}") || true
-            sudo docker run -d --name ${SERVICE_NAME} -p 8080:${SERVICE_PORT} ${ECR_REGISTRY}/${SERVICE_NAME}:latest
+            sudo docker run -d --name ${SERVICE_NAME} -p 8080:${SERVICE_PORT} ${ECR_REGISTRY}/${SERVICE_NAME}:latest sh
+            sudo docker ps -a
