--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -58,7 +58,6 @@ jobs:
           source: "*.tar"
           target: /home/ubuntu/kps/docker_images/${{ env.SERVICE_NAME }}
           
-          
       - name: Push to AWS-ECR
         env:
           ECR_REGISTRY: ${{ steps.version.outputs.ECR_REGISTRY }}
@@ -86,6 +85,10 @@ jobs:
             sudo docker pull ${ECR_REGISTRY}/${SERVICE_NAME}:latest
             sudo docker images
             sudo docker rm -f $(sudo docker ps -aqf "name=${SERVICE_NAME}") || true
-            sudo docker run -d --rm --log-driver=gelf --log-opt gelf-address=${LOGSTASH_URI} --name=${SERVICE_NAME} --publish=${SERVICE_PORT}:${SERVICE_PORT} --volume=${SERVICE_NAME}-vol:/var/lib/${SERVICE_NAME}/${SERVICE_NAME}-vol ${ECR_REGISTRY}/${SERVICE_NAME}:latest
+            sudo docker rmi $(sudo docker images | grep '${SERVICE_NAME}') || true
+            sudo docker run -d --log-driver=gelf --log-opt gelf-address=${LOGSTASH_URI} --name=${SERVICE_NAME} --publish=8080:${SERVICE_PORT} --volume=${SERVICE_NAME}-vol:/var/lib/${SERVICE_NAME}/${SERVICE_NAME}-vol ${ECR_REGISTRY}/${SERVICE_NAME}:latest
             sudo docker ps -a
-            
+            cd /home/ubuntu/kps/fe-web
+            rm -R html || true
+            sudo docker cp edutest-fe:/usr/share/nginx/html/ .
+            aws s3 cp html/ s3://kps-exam/ --recursive
