--- a/.github/workflows/DeployToAWS.yml
+++ b/.github/workflows/DeployToAWS.yml
@@ -81,12 +81,13 @@ jobs:
             SERVICE_PORT=${{ env.SERVICE_PORT }}
             LOGSTASH_URI=${{ env.LOGSTASH_URI }}
             ECR_REGISTRY=${{ steps.version.outputs.ECR_REGISTRY }}
+            OLD_DOCKER_IMAGE_ID=%(sudo docker images --filter="${ECR_REGISTRY}/${SERVICE_NAME}:latest" --quiet)
             aws ecr get-login-password --region ${AWS_REGION} | sudo docker login --username AWS --password-stdin ${ECR_REGISTRY}
             sudo docker pull ${ECR_REGISTRY}/${SERVICE_NAME}:latest
             sudo docker images
             sudo docker rm -f $(sudo docker ps -aqf "name=${SERVICE_NAME}") || true
-            sudo docker rmi $(sudo docker images | grep '${SERVICE_NAME}') || true
             sudo docker run -d --log-driver=gelf --log-opt gelf-address=${LOGSTASH_URI} --name=${SERVICE_NAME} --publish=8080:${SERVICE_PORT} --volume=${SERVICE_NAME}-vol:/var/lib/${SERVICE_NAME}/${SERVICE_NAME}-vol ${ECR_REGISTRY}/${SERVICE_NAME}:latest
+            sudo docker rmi ${OLD_DOCKER_IMAGE_ID} || true
             sudo docker ps -a
             cd /home/ubuntu/kps/fe-web
             rm -R html || true
